force-app/main/default/objects/Appointment__c/fields/Assigned_Adviser__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Adviser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Adviser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>